afegit lorem ipsum al data

--- a/other/practica.tex
+++ b/other/practica.tex
@@ -461,6 +461,7 @@ Murmur3(key, len, seed)
 \item \textbf{Harry Potter and the Sourcerer Stone}: All the text from the first Harry Potter novel.
 \item \textbf{The Lord of The Rings: The return of the King}: The entire script from the last Lord of the Rings movie.
 \item \textbf{Star Wars: Heir to the Empire}:  An Star Wars novel by Timothy Zahn. 
+\item \textbf{50-word lorem ipsum}: The lorem ipsum text is widely used as a place-holder for text so we decided to take 50 words and make our tests based on permutations of it.
 \end{itemize}
 
 \subsection{Generating the data} \label{generatingData}
