--- a/other/practica.tex
+++ b/other/practica.tex
@@ -201,12 +201,16 @@ hash_vec(V) {
 \bigskip
 \textbf{Our C++ implementation can be found in function \textit{hash\_vec} in `\textit{\mbox{jaccardaprox.cc}}'}
 
-\subsection{Filling the characteristic matrix}
-The characteristic matrix is the one we use to represent the shingles that each document has ({see \autoref{Representation}). The complexity of this algorithm is $O(n^2)$ where n is the total number of shingles that we get as input.
+\subsection{Filling the characteristic matrix} \label{fillingCharacMatrix}
+The characteristic matrix is the one we use to represent the shingles that each document has ({see \autoref{Representation}). 
+
+\bigskip
+The complexity of the algorithm we use to fill it is $O(n*m)$ where $n$ is number of rows of the matrix (the number of unique k-shingles) and $m$ is the number of columns of the matrix (the number of documents).
+
 \begin{itemize}
-\item characMatrix is the characteristic matrix
-\item shingles is a set containing all the shingles we have in total
-\item docShing is a vector of sets in which in position i we have the set of shingles of document i. 
+\item characMatrix is the characteristic matrix (empty at the beginning of the algorithm)
+\item shingles is ordered set containing all the shingles we have in total
+\item docShing is a vector of sets in which in position i we have the set of shingles for document i. 
 \end{itemize}
  \begin{center}
 \begin{large}
@@ -214,19 +218,19 @@ Pseudocode To Fill The Characteristic Matrix
 \end{large}
 \end{center}
  \begin{lstlisting}
-fill(characMatrix, shingles,docShing){
-    iterator it = shingles.begin();
-    for i = 0 to characMatrix.size() do:
-        shingle = *(it++);
-        for j = 0 to characMatrix[0].size() do:
-            if(docShing[j] contains(shingle)) then characMatrix[i][j] = 1;
-            else characMatrix[i][j] = 0;
+fill(characMatrix, shingles, docShing){
+    for each row i of characMatrix do:
+        for each column j of characMatrix do:
+            if docShing[j] contains shingles[i] do:
+            	characMatrix[i][j] = 1;
+            else
+            	characMatrix[i][j] = 0;
 \end{lstlisting}
 
 \bigskip
 \textbf{Our C++ implementation can be found in function \textit{fill} in `\textit{\mbox{jaccardaprox.cc}}'}
 
-\subsection{Computing the signature matrix}
+\subsection{Computing the signature matrix} \label{computingSignMatrix}
 The signature matrix is the one resulting from finding for each hash function that we have applied and for every document, the first row where there appears a 1 in its permutation.
 To compute the signature matrix we use one of the three algorithms.
 \begin{itemize}
@@ -234,7 +238,7 @@ To compute the signature matrix we use one of the three algorithms.
 \item multiplicative hashing
 \item murmur hashing 
 \end{itemize}
-The time complexity on this algorithm is tricky as we have to take into account the cost of the hashing algorithm used. Usually the time will be $O(n^2 * h * \zeta)$ where n is the number of shingles of the characteristic matrix, h is the number of hashing algorithms that we use and $\zeta$ is the cost of computing the hash value.
+The time complexity of this algorithm is tricky as we have to take into account the cost of the hashing algorithm used. Usually the time will be $O(n*m*h*\zeta)$ where $n$ and $m$ are the number of rows and columns of the characteristic matrix respectively, $h$ is the number of hashing algorithms that we use and $\zeta$ is the cost of computing the hash value.
 Albeit we use the algorithms only to compute the hash to do row permutations, we follow a general schema to fill it that goes as it follows:
 
  \begin{center}
@@ -566,8 +570,10 @@ We can observe that the first approach, while being the only one that computes t
 
 The other two approaches are way better alternatives, as they are asymptotically faster.
 And, while they seem to both be asymptotically linear, we don't think that's the case.
-We don't have the time or computing power to do tests with larger datasets, but the way the second approach is constructed, it iterates through all the $\binom{n}{2}$ possible pairs of documents, and this has cost $O(n^2)$, with $n$ being the number of documents. 
-We believe that most of the computation time is spent constructing the k-shingles set, and constructing the signature matrix, with a cost of $O(n)$, and that the similarity calculation for all the possible document pairs represents only a small fraction of the total time for relatively small datasets, thus making it seem of linear behavior.
+We don't have the time or computing power to do tests with larger datasets, but the way the second approach is constructed, it iterates through all the $\binom{n}{2}$ possible pairs of documents, which has cost $O(n^2)$, with $n$ being the number of documents.
+
+We believe that most of the computation time is spent constructing the k-shingles set, and constructing the signature matrix, which has a cost of $O(n)$ (see \autoref{fillingCharacMatrix} and \autoref{computingSignMatrix}), and that the similarity calculation for all the possible document pairs represents only a small fraction of the total time for relatively small datasets, thus making it seem of linear behavior.
+
 At the same time, the third approach is also faster than the second one, we can see in \autoref{fig:JaccSignLSH} how they diverge as the size of the datasets increases.
 In this case, we believe the cost is still quadratic, but with a way smaller scaling factor, as only a small fraction of the possible $\binom{n}{2}$ document pairs are selected as candidates for similarity checking.
 \bigskip
