una mica de data info

--- a/other/practica.tex
+++ b/other/practica.tex
@@ -606,8 +606,8 @@ As we expected when the number of hash functions is small the difference between
 	\caption{Approximated Jaccard Similarity for a pair of 2 documents with 60\% real similarity (K-shingles size = 9)}
 	\label{fig:JaccardVsApprox}
 \end{figure}
-\section{Visualizing the data}
-
+\subsection{Visualizing the data}
+To make it easier for us to compute and visualize graphically the results we have set up a python script. Although to generate said information first we have to execute the corresponding programs (posar lo del makefile i com es guarda). When we execute the script we are prompted with a series of options to choose from, obviously if we have not done the experiment chosen beforehand we wont have any data to read and thus we wont have a graphic or we will get a graphing made from previous data.
 \clearpage
 \section{Conclusions}
 
