makefile changed and manual finished

--- a/other/manual.tex
+++ b/other/manual.tex
@@ -23,17 +23,20 @@
    To run it you have to type: \textit{make}
    \item Generate the program that \textbf{compares two different documents using Jaccard Similarity}:
    To run it you have to type: \textit{make compjac}
-\item Generate the program that creates the data for our \textbf{INSERT NAME EXPERIMENT} experiment:
-   To run it you have to type: \textit{make jocProvesJaccard}
- \item Generate the program that creates the data for our \textbf{INSERT NAME EXPERIMENT} experiment:
-   To run it you have to type: \textit{make jocProvesJaccApprox}
+  
+  
+   \item Generate the program that generates \textbf{permutations} of a file:
+   To run it you have to type: \textit{make permutacions}
+ 
+   
+\item Generate the program that creates the data for our \textbf{Performance of Different Hashing Algorithms} experiment:
+   To run it you have to type: \textit{make jocProvesHashTimes}
+  
 \item Generate the program that creates the data for our \textbf{Performance of Different Document Similarity Approaches} experiment:
    To run it you have to type: \textit{make jocProvesJaccSim}
    \item Generate the program that creates the data for our \textbf{Precision of Jaccard Similarity Approximations} experiment:
    To run it you have to type: \textit{make jocProvesJaccSimLsh}
-    \item Generate the program that creates the data for our \textbf{INSERT NAME EXPERIMENT} experiment:
-   To run it you have to type: \textit{make jocProvesLsh}
-   \item Generate the textbf{Modular Hashing Function} object file:
+   \item Generate the \textbf{Modular Hashing Function} object file:
    To run it you have to type: \textit{make ModularHash.o} 
    \item Generate the \textbf{Multiplicative Hashing Function} object file:
    To run it you have to type: \textit{make Multiplicative.o}
