--- a/other/practica.tex
+++ b/other/practica.tex
@@ -607,7 +607,7 @@ As we expected when the number of hash functions is small the difference between
 	\label{fig:JaccardVsApprox}
 \end{figure}
 \subsection{Visualizing the data}
-To make it easier for us to compute and visualize graphically the results we have set up a python script which uses the matplot library. Although to generate the aforementioned information first we have to execute the corresponding programs (see the manual) and then the information gets saved in a csv format. When we execute the script we are prompted with a series of options to choose from, obviously if we have not done the experiment chosen beforehand we wont have any data to read and thus we wont have a graphic or we will get a graphic made from previous data.
+To make it easier for us to compute and visualize graphically the results we have set up a python script which uses the matplot library. Although to generate the aforementioned information first we have to execute the corresponding programs (see the manual) and then the information is saved in a csv format. When we execute the script we are prompted with a series of options to choose from. Please notice that if we have not done the experiment chosen beforehand we won't have any data to read and thus we won't have a graphic or we will get a graphic made from previous data.
 \clearpage
 \section{Conclusions}
 
