--- a/other/manual.tex
+++ b/other/manual.tex
@@ -15,7 +15,7 @@
 \begin{document}
   \maketitle  
    \newpage
-   \section{Makefile}
+   \section{Compiling}
    To make easier the work of compiling end executing the source files we have created a makefile that can be seen in our source folder. Inside the makefile we have determined several functionalities that can help us in the task of compiling and executing our source files:
    
    \begin{itemize}
@@ -36,6 +36,8 @@
    To run it you have to type: \textit{make jocProvesJaccSim}
    \item Generate the program that creates the data for our \textbf{Precision of Jaccard Similarity Approximations} experiment:
    To run it you have to type: \textit{make jocProvesJaccSimLsh}
+   \item Generate the program that creates a driver of all our functionalities:
+   To run it you have to type: \textit{make mainDriver}
    \item Generate the \textbf{Modular Hashing Function} object file:
    To run it you have to type: \textit{make ModularHash.o} 
    \item Generate the \textbf{Multiplicative Hashing Function} object file:
@@ -51,5 +53,15 @@
    \item \textbf{Delete all the object and executables files} generated in the folder:
    To run it you have to type: \textit{make clean}
    \end{itemize}
+      \section{Executing}
+         \subsection{Executing the programs created}
+         After using the makefile to compile the wanted file an executable file with the same name will be generated.\\
+         To run it you have to type:  \textit{./name of the file}
+   \subsection{Main Driver}
+   We have also developed a driver where you can try all of our implemented functionalities by answering the questions that are prompted.
+   To run it you have to type:  \textit{./mainDriver}
+
+   
+   
 \end{document}
 
