manual i makefile changed

--- a/other/manual.tex
+++ b/other/manual.tex
@@ -16,7 +16,7 @@
   \maketitle  
    \newpage
    \section{Compiling}
-   To make easier the work of compiling end executing the source files we have created a makefile that can be seen in our source folder. Inside the makefile we have determined several functionalities that can help us in the task of compiling and executing our source files:
+   To make easier the work of compiling end executing the source files we have created a makefile that can be seen in our source folder. Inside the makefile we have determined several functionalities that can help us in the task of compiling our source files:
    
    \begin{itemize}
    \item \textbf{Default option}: it compiles all our source files and generates all our executables. It also creates several object files in order to be able to generate some of our executables. 
@@ -58,7 +58,7 @@
          After using the makefile to compile the wanted file an executable file with the same name will be generated.\\
          To run it you have to type:  \textit{./name of the file}
    \subsection{Main Driver}
-   We have also developed a driver where you can try all of our implemented functionalities by answering the questions that are prompted.
+   We have also implemented a driver where you can try all of our implemented functionalities by answering the questions that are prompted.
    To run it you have to type:  \textit{./mainDriver}
 
    
