--- a/other/manual.tex
+++ b/other/manual.tex
@@ -21,47 +21,33 @@
    \begin{itemize}
    \item \textbf{Default option}: it compiles all our source files and generates all our executables. It also creates several object files in order to be able to generate some of our executables. 
    To run it you have to type: \textit{make}
-   \item Generate the program that \textbf{compares two different documents using Jaccard Similarity}:
-   To run it you have to type: \textit{make compjac}
-  
-  
-   \item Generate the program that generates \textbf{permutations} of a file:
-   To run it you have to type: \textit{make permutacions}
- 
-   
-\item Generate the program that creates the data for our \textbf{Performance of Different Hashing Algorithms} experiment:
-   To run it you have to type: \textit{make jocProvesHashTimes}
-  
-\item Generate the program that creates the data for our \textbf{Performance of Different Document Similarity Approaches} experiment:
-   To run it you have to type: \textit{make jocProvesJaccSim}
-   \item Generate the program that creates the data for our \textbf{Precision of Jaccard Similarity Approximations} experiment:
-   To run it you have to type: \textit{make jocProvesJaccSimLsh}
-   \item Generate the program that creates a driver of all our functionalities:
-   To run it you have to type: \textit{make mainDriver}
-   \item Generate the \textbf{Modular Hashing Function} object file:
-   To run it you have to type: \textit{make ModularHash.o} 
-   \item Generate the \textbf{Multiplicative Hashing Function} object file:
-   To run it you have to type: \textit{make Multiplicative.o}
-   \item Generate the \textbf{Murmur Hashing Function} object file:
-   To run it you have to type: \textit{make MurmurHash3.o}
-   \item Generate the \textbf{Jaccard Approximation} object file:
-   To run it you have to type: \textit{make jaccardaprox.o}
-   \item Generate the \textbf{Jaccard Similarity} object file:
-   To run it you have to type: \textit{make jaccard.o}
-   \item Generate the \textbf{k-shingles} object file:
-   To run it you have to type: \textit{make kshingles.o}
    \item \textbf{Delete all the object and executables files} generated in the folder:
    To run it you have to type: \textit{make clean}
    \end{itemize}
       \section{Executing}
-         \subsection{Executing the programs created}
          After using the makefile to compile the wanted file an executable file with the same name will be generated.\\
-         To run it you have to type:  \textit{./name of the file}
-   \subsection{Main Driver}
-   We have also implemented a driver where you can try all of our implemented functionalities by answering the questions that are prompted.
-   To run it you have to type:  \textit{./mainDriver}
+            
+   \begin{itemize}
+           \item Execute the program that \textbf{compares two different documents using Jaccard Similarity}:
+   To run it you have to type: \textit{./compjac}
+  
 
+   \item Execute the program that generates \textbf{permutations} of a file:
+   To run it you have to type: \textit{./permutacions}
+    
+\item Execute the program that creates the data for our \textbf{Performance of Different Hashing Algorithms} experiment:
+   To run it you have to type: \textit{./jocProvesHashTimes}
+  
+\item Execute the program that creates the data for our \textbf{Performance of Different Document Similarity Approaches} experiment:
+   To run it you have to type: \textit{./jocProvesJaccSim}
+   \item Execute the program that creates the data for our \textbf{Precision of Jaccard Similarity Approximations} experiment:
+   To run it you have to type: \textit{./jocProvesJaccSimLsh}
    
-   
+      \item Execute the program that creates the data for our \textbf{k-shigles size} experiment:
+   To run it you have to type: \textit{./jovProvesJaccard}
+
+   \item Execute the program where you can try all of our implemented functionalities by answering the questions that are prompted:
+   To run it you have to type: \textit{./mainDriver}
+      \end{itemize}
 \end{document}
 
